New-Upload-1755854042013/objects/Org_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Date_Connected__c</fullName>
        <label>Date Connected</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Developer_Org__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Developer Org</label>
        <referenceTo>Developer_Org__c</referenceTo>
        <relationshipLabel>Org Assignments</relationshipLabel>
        <relationshipName>Org_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Named_Credential__c</fullName>
        <label>Named Credential</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org Group</label>
        <referenceTo>Org_Group__c</referenceTo>
        <relationshipLabel>Org Assignments</relationshipLabel>
        <relationshipName>Org_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Org_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Org Assignment</label>
    <nameField>
        <displayFormat>ASSIGN-{0000}</displayFormat>
        <label>Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Org Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>